resources/css/styles.css
body {
	position: relative;
}

html {
	font-size: 1em;
	-webkit-text-size-adjust: 1em; /* 2 */
	-ms-text-size-adjust: 1em;
}

.nav-container {
	background-color: white;
	padding: 20px;
}

.logo {
	display: block;
	margin: 0 auto;
    width: 70px;
}

.content-container {
	background-color: #41c6ea;
	color: white;
	font-family: 'Cabin', sans-serif;
	height: calc(100vh - 77.06px);

	display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-line-pack: center;
    -webkit-align-content: center;
    -moz-align-content: center;
    -ms-align-content: center;
    align-content: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
}

.content-container h1 {
	font-size: 5em;
	margin: 0 auto;
	text-align: center;
	text-transform: uppercase;
	width: 80%;
}

.content-container h1 span {
	display: block;
}


// mobiles sizes
@media screen and (max-width: 1024px) {
	.content-container h1 {
		font-size: 3em;
	}
}

@media screen and (max-width: 480px) {
	.content-container h1 {
		font-size: 2em;
		width: 90%;
	}
}

